# learn_algoritms

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  algorims_4.cpp  algoritms_1.c  algoritms_2.cpp  algoritms_3.cpp  cmake_install.cmake
algoritms/:  Алгоритм Increment для нечётных натуральных чисел.md  Алгоритм оптимального планирования.md  Рекурсивные объекты в алгоритмах.md  Рекурсивный алгоритм инкрементации на C++.md
graph/: CMakeLists.txt  analyzer.py  ci.yaml  config.json  exporter.py  graph_builder.cpp  graph_generator.h  graph_io.cpp  graph_visualizer.py  graph_visualizer_3d.py  index.html  script.js  styles.css  test_analyzer.py  tests.cpp  visualize_graph.py
homework/: Упражнение 1 объяснение.md  Упражнение 1 реализация.md
src/: CMakeLists.txt  algorims_4.cpp  algoritms_3.cpp
tools/: build.sh  run.sh  test_algoritms.sh
