# ????????? ???? ? ????????? ????
add_executable(graph_builder graph_builder.cpp)

# ???????? ? ?????????????? ???????????
target_link_libraries(graph_builder m)

# ????????????? ????? ??? ?????????? ??????
set_target_properties(graph_builder PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
)
