# ?????????, ????? ????? ?????????????
add_executable(algoritms_1 algoritms_1.c)
add_executable(algoritms_2 algoritms_2.cpp)
add_executable(algoritms_3 algoritms_3.cpp)
add_executable(algorims_4 algorims_4.cpp)

# ???????? ? ?????????????? ???????????
target_link_libraries(algoritms_1 m)
target_link_libraries(algoritms_2 m)
target_link_libraries(algoritms_3 m)
target_link_libraries(algorims_4 m)

# ????????????? ???? ??? ?????????? ??????
set_target_properties(
    algoritms_1 algoritms_2 algoritms_3 algorims_4
    PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
)